--- a/jogo.html
+++ b/jogo.html
@@ -10,7 +10,7 @@
 	
 	<!--Chamando minha função ao carregar a pagina-->
 	<body onload="iniciaJogo()">
-		<!--div q contem o tempo, a quantidade de baloes estorados e baloes a estorar-->
+		<!--div q contem o tempo, a quantidade de baloes estourados e baloes a estorar-->
 		<div style="float:left;width:auto;heigth:500px;background:#FFF;border:solid 1px #A2A2A2; margin-right: 5px">
 			<table border="0">
 				<tr>
@@ -39,7 +39,7 @@
 			<table border="0" style="width: 140px; height:132px;">
 				<tr>
 					<td style="background:url('imagens/cronometro.png');text-align:center;">
-						<!--minha span com id cronometro esta recebendo quantidade de tempo de cada nivel-->
+						<!--minha span com id cronometro esta recebendo a o tempo para cada nivel-->
 						<span style="color:red;font-size:30px" id="cronometro"></span>
 					</td>
 				</tr>	
